force-app/main/default/objects/WorkOrder/fields/Acceptance_Condition__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Condition__c</fullName>
    <label>인수 조건</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>