force-app/main/default/objects/WorkOrder/fields/Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Date__c</fullName>
    <label>인수일</label>
    <type>Date</type>
</CustomField>