force-app/main/default/objects/WorkOrder/fields/Acceptance_Type__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Type__c</fullName>
    <label>인수 유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>최종인수</fullName>
            </value>
            <value>
                <fullName>조건부인수</fullName>
            </value>
            <value>
                <fullName>반려</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>