force-app/main/default/objects/WorkOrder/fields/Accepted_By_Contact__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>인수자</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>