force-app/main/default/objects/WorkOrder/fields/Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Taken__c</fullName>
    <label>조치 내용</label>
    <description>장애 복구 Work Order에서 수행한 복구 조치의 내용. O3(Problem) 재발방지 분석에서 재사용되므로 신설이 아니라 공용 필드다.</description>
    <inlineHelpText>실제로 수행한 복구 조치를 기록합니다. 예: 배관 플랜지 재조임(M16 x 8개소).</inlineHelpText>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>