force-app/main/default/objects/WorkOrder/fields/Critical_Punch_Count__c.field-meta.xml
<CustomField>
    <fullName>Critical_Punch_Count__c</fullName>
    <label>Critical Punch 수</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Severity__c</field>
        <operation>equals</operation>
        <value>Critical</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>