force-app/main/default/objects/WorkOrder/fields/Customer_Notification_Draft__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notification_Draft__c</fullName>
    <label>고객 통보문 초안</label>
    <description>복구 완료 후 고객에게 전달할 통보문의 초안. 복구 결과·조치 내용을 바탕으로 작성하며 발송 전 담당자가 검토·보완한다.</description>
    <inlineHelpText>고객에게 안내할 복구 결과 통보문 초안을 작성합니다. 발송 전 담당자가 검토합니다.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>