force-app/main/default/objects/WorkOrder/fields/Has_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Has_Evidence__c</fullName>
    <description>이 WorkOrder에 연결된 증빙 파일(ContentDocumentLink)이 1건 이상 있는지. WorkOrder_Evidence_Check Flow가 저장 시마다 갱신한다. Validation Rule Block_Completion_Without_Evidence가 이 값을 참조해 완료 저장을 차단한다.</description>
    <defaultValue>false</defaultValue>
    <label>증빙 파일 존재</label>
    <type>Checkbox</type>
</CustomField>