force-app/main/default/objects/WorkOrder/fields/Issue_Impact__c.field-meta.xml
<CustomField>
    <fullName>Issue_Impact__c</fullName>
    <label>이슈 영향</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>