force-app/main/default/objects/WorkOrder/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <description>추세 이상이 감지된 점검 WO에 대한 권고 조치 문구. 위험 수준(Risk_Level__c)에 따라 T4-07 추세 판정 Flow가 자동 생성한다.</description>
    <inlineHelpText>추세 판정 결과에 따라 자동 생성되는 권고 조치입니다. 필요 시 담당 기사가 보완할 수 있습니다.</inlineHelpText>
    <label>권고 조치</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>