force-app/main/default/objects/WorkOrder/fields/Repair_Result__c.field-meta.xml
<CustomField>
    <fullName>Repair_Result__c</fullName>
    <label>복구 결과</label>
    <description>장애 복구 Work Order의 복구 조치 완료 후 최종 결과 요약. 복구 후 검증 측정과 함께 O3(Problem) 근본원인 규명의 입력이 된다.</description>
    <inlineHelpText>복구 조치를 마친 뒤 확인된 최종 결과를 기록합니다. 예: 재조임 후 유량이 사양 범위로 복귀.</inlineHelpText>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>