force-app/main/default/objects/WorkOrder/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>위험 수준</label>
    <description>예방정비 점검 결과에 대한 Work Order 단위 위험 수준. 하위 WorkOrderLineItem의 추세 판정(Trend_Flag__c) 중 최고 등급을 상향 반영한다(정상&lt;보통&lt;높음). T4-07 추세 판정 Flow가 자동 기입.</description>
    <inlineHelpText>이 점검 WO의 종합 위험 수준입니다. 하위 측정 항목의 추세 판정에서 자동 산정되며 상향만 반영됩니다.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>높음</fullName>
            </value>
            <value>
                <fullName>보통</fullName>
            </value>
            <value>
                <fullName>낮음</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>