force-app/main/default/objects/WorkOrder/fields/Site_Issue__c.field-meta.xml
<CustomField>
    <fullName>Site_Issue__c</fullName>
    <label>현장 이슈</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>