force-app/main/default/objects/WorkOrder/fields/Site_Issue_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Issue_Status__c</fullName>
    <label>현장 이슈 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>등록</fullName>
            </value>
            <value>
                <fullName>확인중</fullName>
            </value>
            <value>
                <fullName>조치완료</fullName>
            </value>
            <value>
                <fullName>변경요청전환</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>