force-app/main/default/objects/WorkOrder/fields/Technical_Baseline__c.field-meta.xml
<CustomField>
    <fullName>Technical_Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>기준선</label>
    <referenceTo>Technical_Baseline__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>