force-app/main/default/objects/WorkOrder/fields/Work_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Work_Subtype__c</fullName>
    <label>작업 세부유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>설치</fullName>
            </value>
            <value>
                <fullName>시운전</fullName>
            </value>
            <value>
                <fullName>예방정비</fullName>
            </value>
            <value>
                <fullName>장애복구</fullName>
            </value>
            <value>
                <fullName>시정조치</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>