force-app/main/default/objects/WorkOrder/validationRules/Block_Completion_Without_Evidence.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Completion_Without_Evidence</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL( Status, &quot;Completed&quot;),
   NOT( Has_Evidence__c )
)</errorConditionFormula>
    <errorDisplayField>Has_Evidence__c</errorDisplayField>
    <errorMessage>증빙 파일이 없어 완료 처리할 수 없습니다. 작업 결과·사진 등 증빙 파일을 첨부한 뒤 다시 저장하세요.</errorMessage>
</ValidationRule>