force-app/main/default/objects/WorkOrder/validationRules/Block_Conditional_Acceptance_Without_Rea.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Conditional_Acceptance_Without_Rea</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Acceptance_Type__c, &quot;조건부인수&quot;),
  ISBLANK( Acceptance_Condition__c )
)</errorConditionFormula>
    <errorDisplayField>Acceptance_Condition__c</errorDisplayField>
    <errorMessage>조건부인수로 저장하려면 인수 조건(사유)를 반드시 입력해야 합니다.</errorMessage>
</ValidationRule>