force-app/main/default/objects/WorkOrder/validationRules/Block_Final_Acceptance_If_Critical_Punch.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Final_Acceptance_If_Critical_Punch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL( Acceptance_Type__c, &quot;최종인수&quot;),
   Critical_Punch_Count__c &gt; 0
)</errorConditionFormula>
    <errorDisplayField>Acceptance_Type__c</errorDisplayField>
    <errorMessage>Critical Punch가 남아있는 상태에서는 최종인수로 저장할 수 없습니다.</errorMessage>
</ValidationRule>