force-app/main/default/objects/WorkOrder/validationRules/Block_WO_Without_Approved_Baseline.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_WO_Without_Approved_Baseline</fullName>
    <active>true</active>
    <description>Technical Baseline가 승인되지 않은 상태에서는 Work Order를 저장할 수 없습니다.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Technical_Baseline__c)),
    NOT(ISPICKVAL(Technical_Baseline__r.Approval_Status__c, &apos;승인&apos;))
)</errorConditionFormula>
    <errorDisplayField>Technical_Baseline__c</errorDisplayField>
    <errorMessage>연결된 Technical Baseline이 아직 승인되지 않았습니다. Technical Baseline의 승인 완료 후 Work Order를 생성하십시오.</errorMessage>
</ValidationRule>