force-app/main/default/objects/WorkOrder/listViews/All_Open_WorkOrders.listView-meta.xml
<ListView>
    <fullName>All_Open_WorkOrders</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>전체 오픈 작업지시</label>
</ListView>