force-app/main/default/objects/WorkOrder/listViews/My_In_Progress.listView-meta.xml
<ListView>
    <fullName>My_In_Progress</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>내 진행 중 작업지시</label>
</ListView>